# shotcut

./: .astylerc  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Get-Qt.ps1  Info.plist  README.md  Run-CMakeBuild.ps1  abstractproducerwidget.cpp  abstractproducerwidget.h  build.ps1  deploy-osx.sh  glwidget.cpp  glwidget.h  install.ps1  jobqueue.cpp  jobqueue.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  make-ico.py  mlt.icns  mltcontroller.cpp  mltcontroller.h  openotherdialog.cpp  openotherdialog.h  openotherdialog.ui  other-resources.qrc  player.cpp  player.h  resources.qrc  scrubbar.cpp  scrubbar.h  sdlwidget.cpp  sdlwidget.h  shotcut.appdata.xml  (+5 more)
CuteLogger/: CMakeLists.txt  CuteLogger.pro  Doxyfile
CuteLogger/include/: AbstractAppender.h  AbstractStringAppender.h  AndroidAppender.h  ConsoleAppender.h  CuteLogger_global.h  FileAppender.h  Logger.h  OutputDebugAppender.h  RollingFileAppender.h
CuteLogger/src/: AbstractAppender.cpp  AbstractStringAppender.cpp  AndroidAppender.cpp  ConsoleAppender.cpp  FileAppender.cpp  Logger.cpp  OutputDebugAppender.cpp  RollingFileAppender.cpp
MinimalMediaBackend/: CMakeLists.txt  minimalmediaplugin.cpp  minimalmediaplugin.json
src/: CMakeLists.txt  FlatpakWrapperGenerator.cpp  FlatpakWrapperGenerator.h  abstractproducerwidget.cpp  abstractproducerwidget.h  actions.cpp  actions.h  autosavefile.cpp  autosavefile.h  category.js  database.cpp  database.h  dataqueue.h  defaultlayouts.h  forwardingquickviewworkaround.cpp  forwardingquickviewworkaround.h  glwidget.cpp  glwidget.h  gpuinfo.cpp  gpuinfo.h  hdrpreviewwindow.cpp  hdrpreviewwindow.h  htmlgenerator.cpp  htmlgenerator.h  jobqueue.cpp  jobqueue.h  leaplistener.cpp  leaplistener.h  leapnetworklistener.cpp  leapnetworklistener.h  linuxtools.cpp  linuxtools.h  macos.h  macos.mm  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mltcontroller.cpp  mltcontroller.h  (+33 more)
src/GLee/: extensionList.txt
src/commands/: filtercommands.cpp  filtercommands.h  markercommands.cpp  markercommands.h  playlistcommands.cpp  playlistcommands.h  subtitlecommands.cpp  subtitlecommands.h  timelinecommands.cpp  timelinecommands.h  undohelper.cpp  undohelper.h
src/controllers/: addonmetadataparser.cpp  addonmetadataparser.h  addonqmlgenerator.cpp  addonqmlgenerator.h  filtercontroller.cpp  filtercontroller.h  scopecontroller.cpp  scopecontroller.h
src/dialogs/: actionsdialog.cpp  actionsdialog.h  addencodepresetdialog.cpp  addencodepresetdialog.h  addencodepresetdialog.ui  addonfiltersdialog.cpp  addonfiltersdialog.h  addonmetadatahelpdialog.cpp  addonmetadatahelpdialog.h  alignaudiodialog.cpp  alignaudiodialog.h  alignmentarray.cpp  alignmentarray.h  bitratedialog.cpp  bitratedialog.h  customprofiledialog.cpp  customprofiledialog.h  customprofiledialog.ui  durationdialog.cpp  durationdialog.h  durationdialog.ui  editmarkerdialog.cpp  editmarkerdialog.h  filedatedialog.cpp  filedatedialog.h  filedownloaddialog.cpp  filedownloaddialog.h  listselectiondialog.cpp  listselectiondialog.h  listselectiondialog.ui  longuitask.cpp  longuitask.h  multifileexportdialog.cpp  multifileexportdialog.h  resourcedialog.cpp  resourcedialog.h  saveimagedialog.cpp  saveimagedialog.h  slideshowgeneratordialog.cpp  slideshowgeneratordialog.h  (+18 more)
src/docks/: elementsdock.cpp  elementsdock.h  encodedock.cpp  encodedock.h  encodedock.ui  filesdock.cpp  filesdock.h  filesdock.ui  filtersdock.cpp  filtersdock.h  filtersdock.ui  findanalysisfilterparser.h  jobsdock.cpp  jobsdock.h  jobsdock.ui  keyframesdock.cpp  keyframesdock.h  markersdock.cpp  markersdock.h  notesdock.cpp  notesdock.h  playlistdock.cpp  playlistdock.h  playlistdock.ui  recentdock.cpp  recentdock.h  recentdock.ui  scopedock.cpp  scopedock.h  subtitlesdock.cpp  subtitlesdock.h  timelinedock.cpp  timelinedock.h  timelinedock.ui
src/filters/: boxblurfilter.cpp  boxblurfilter.h  boxblurfilter.ui  cropfilter.cpp  cropfilter.h  cropfilter.ui  frei0rcoloradjwidget.cpp  frei0rcoloradjwidget.h  frei0rcoloradjwidget.ui  frei0rglowfilter.cpp  frei0rglowfilter.h  frei0rglowfilter.ui  frei0rsharpnessfilter.cpp  frei0rsharpnessfilter.h  frei0rsharpnessfilter.ui  movitblurfilter.cpp  movitblurfilter.h  movitblurfilter.ui  movitcolorfilter.cpp  movitcolorfilter.h  movitcolorfilter.ui  movitglowfilter.cpp  movitglowfilter.h  movitglowfilter.ui  movitsharpenfilter.cpp  movitsharpenfilter.h  movitsharpenfilter.ui  normalize.cpp  normalize.h  normalize.ui  saturationfilter.cpp  saturationfilter.h  saturationfilter.ui  webvfxfilter.cpp  webvfxfilter.h  webvfxfilter.ui  whitebalancefilter.cpp  whitebalancefilter.h  whitebalancefilter.ui
src/htmleditor/: highlighter.cpp  highlighter.h  htmleditor.cpp  htmleditor.h  htmleditor.ui  inserthtmldialog.ui
src/jobs/: abstractjob.cpp  abstractjob.h  bitrateviewerjob.cpp  bitrateviewerjob.h  dockerpulljob.cpp  dockerpulljob.h  encodejob.cpp  encodejob.h  ffmpegjob.cpp  ffmpegjob.h  ffprobejob.cpp  ffprobejob.h  gopro2gpxjob.cpp  gopro2gpxjob.h  htmlgeneratorjob.cpp  htmlgeneratorjob.h  kokorodokijob.cpp  kokorodokijob.h  meltjob.cpp  meltjob.h  postjobaction.cpp  postjobaction.h  qimagejob.cpp  qimagejob.h  screencapturejob.cpp  screencapturejob.h  videoqualityjob.cpp  videoqualityjob.h  whisperjob.cpp  whisperjob.h
src/models/: actionsmodel.cpp  actionsmodel.h  addonservicemodel.cpp  addonservicemodel.h  subtitles.cpp  (+31 more)
tests/: CMakeLists.txt  test_gpuinfo.cpp
translations/: CMakeLists.txt  shotcut_ar.ts  shotcut_ca.ts  shotcut_cs.ts  shotcut_da.ts  shotcut_de.ts  shotcut_el.ts  shotcut_en.ts  shotcut_en_GB.ts  shotcut_es.ts  shotcut_et.ts  shotcut_eu.ts  shotcut_fi.ts  shotcut_fr.ts  shotcut_fr_CA.ts  shotcut_ga.ts  shotcut_gd.ts  shotcut_gl.ts  shotcut_he_IL.ts  shotcut_hu.ts  shotcut_hu_HU.ts  shotcut_it.ts  shotcut_ja.ts  shotcut_ko.ts  shotcut_lt.ts  shotcut_nb.ts  shotcut_ne.ts  shotcut_nl.ts  shotcut_nn.ts  shotcut_oc.ts  shotcut_pl.ts  shotcut_pt.ts  shotcut_pt_BR.ts  shotcut_pt_PT.ts  shotcut_ro.ts  shotcut_ru.ts  shotcut_sk.ts  shotcut_sl.ts  shotcut_sv.ts  shotcut_th.ts  (+8 more)
(+2427 files in other folders)
